--- a/front.html
+++ b/front.html
@@ -15,7 +15,7 @@
   
      <div class="logo"><img class="logojpg" src="logo.jpg"></div>
     <div class="name">Care Vault</div>
-    <div class="home"><a href="home.html" style="text-decoration: none; color: black;">Home </a></div>
+    <div class="home"><a href="front.html" style="text-decoration: none; color: black;">Home </a></div>
     <div class="about"><a href="about.html" style="text-decoration: none; color: black;">About us</a></div>
     <div class="regi"><a href="registration.html" style="text-decoration: none; color: black;">Registration</a></div>
       
@@ -23,6 +23,16 @@
   </div>
   <div>
     <img src="WhatsApp Image 2025-03-02 at 1.13.40 AM.jpeg" class="front">
+  </div>
+  <div>
+    <p class="head">
+      <span class="heading">Welcome to MedChain – Your Health, Your Choice!</span> <br><br>
+
+
+MedChain is a secure and easy way to store and share medical records. You control who can see your records—doctors can only access them with your permission. No middlemen, no risk! We use blockchain and IPFS to keep your information safe and private. Signing up is simple with MetaMask, and you can manage everything in just a few clicks. Stay in charge of your health records, stress-free!<br><br>
+
+<span class="foot" style="font-weight: 600;"> Safe 🔹 Private 🔹 In Your Hands!</span>
+    </p>
   </div>
 </body>
 </html>
