--- a/registration.html
+++ b/registration.html
@@ -7,10 +7,11 @@
   <title>Registration</title>
 </head>
 <body>
+  
   <div class="Registration-page">
     <div class="dp-registration">
-      <button  class="d-registration">Doctor Registration</button>
-      <button  class="p-registration">Patient Registration</button>
+      <a class="d-registration-page" href="d-registration-page.html"><button  class="d-registration">Doctor Registration</button></a>
+      <a class="p-registration-page" href="patient-registration.html"><button  class="p-registration">Patient Registration</button></a>
     </div>
   </div>
 </body>
