--- a/login.html
+++ b/login.html
@@ -9,8 +9,8 @@
 <body>
   <div class="login-page">
     <div class="dp-login">
-      <button  class="d-login">Doctor Login</button>
-      <button  class="p-login">Patient Login</button>
+      <a class="d-login-page" href="d-login.html"><button  class="d-login">Doctor Login</button></a>
+      <a class="p-login-page" href="p-login.html"><button  class="p-login">Patient Login</button></a>
     </div>
   </div>
 </body>
